# dotnext2019spb

./: .gitignore
InteropDemos/: InteropDemos.sln
InteropDemos/Common/: DynLoader.cs
InteropDemos/CoreDemos/: ComCallbackBase.cs  CoreDemos.csproj  Interop.cs  Mappings.xml  Program.cs
InteropDemos/SimpleMono/: CallbackDemo.cs  CompleteObjectDemo.cs  Consts.cs  DllImportCallbackDemo.cs  Program.cs  SimpleMono.csproj  SimpleObjectDemo.cs  WeirdObjectDemo.cs
vtables/: CMakeLists.txt  callback_object.cpp  complete.cpp  complete_object.cpp  ids.cpp  main.c  simple_callback.c  simple_object.cpp  weird_object.cpp
vtables/include/: com.h  comimpl.h  shared.h  utf8string.h
